--- a/index.html
+++ b/index.html
@@ -5,14 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
     <script src="play.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Rock, Paper, or Scissors?</h1>
-    <div id="moves">
-      <button id="rock">Rock</button>
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
+    <div class="game-wrapper">
+      <div class="score player">
+        <div id="player_score">0</div>
+      </div>
+
+      <div class="score computer">
+        <div id="player_score">0</div>
+      </div>
+
+      <div class="gameboard">
+        <h1>Rock, Paper, or Scissors?</h1>
+        <div id="moves">
+          <button id="rock">
+            <img src="assets/rock_green.png" alt="Rock" />
+          </button>
+          <button id="paper">
+            <img src="assets/paper_green.png" alt="Paper" />
+          </button>
+          <button id="scissors">
+            <img src="assets/scissors_green.png" alt="Scissors" />
+          </button>
+        </div>
+        <div id="result"></div>
+      </div>
     </div>
-    <div id="result"></div>
   </body>
 </html>
