Update results view

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       </div>
 
       <div class="score computer">
-        <div id="player_score">0</div>
+        <div id="computer_score">0</div>
       </div>
 
       <div class="gameboard">
-        <h1>Rock, Paper, or Scissors?</h1>
+        <h1 id="instruction">Rock, Paper, or Scissors?</h1>
         <div id="moves">
           <button id="rock">
             <img src="assets/rock_green.png" alt="Rock" />
